--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
             .custom-dropdown .dropbtton{
 
-                padding: 0;
+                padding-top: 5px;
 
                 -moz-padding: 0;
 
@@ -19,15 +19,15 @@
 
                 font-family: myFirstFont; 
 
-                font-size: 16px;
+                font-size: 19px;
 
             }
 
             .custom-dropdown .dropbtton i{
 
-                font-size: 22px;
+                font-size: 20px;
 
-                padding: 5px 12px;
+                padding: 5px 10px;
 
                  -moz-osx-font-size: 30px;
 
