--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
             .custom-dropdown .dropbtton{
 
-                padding-top: 5px;
+                padding-top: 2px;
 
                 -moz-padding: 0;
 
@@ -110,7 +110,11 @@
   padding-top: 18px !important;
 }       
 
-           
+ .navbar-right{
+  float: right;
+  margin-right: -256px;
+  padding-top: 15px;
+ }          
 
 .dropdown-toggle .icon-bars-button{
 
@@ -220,20 +224,20 @@ top: 15px;
 
 
 .intro-sec{
-  padding-top: 55px;
+  padding-top: 60px;
 }
 
 
 
 .intro-sec .btn-xl {
-padding: 1px 10px;
+padding: 1px 8px;
 border-radius: 0px !important;
 }
 
 
 .video
 {
-    padding-top: 0px;
+    padding-left: 25px;
     padding-bottom: 0px;   
 }
 
@@ -476,8 +480,9 @@ border-radius: 0px !important;
   font-size: 14px;
   display: inline-block;
   color: rgba(85,85,85,0.6);
-  padding-top: 0px;
-  padding-bottom: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 135px;
 }
 
 .fblogin{
@@ -787,7 +792,7 @@ border-radius: 0px !important;
 
     background-color: transparent;
 
-    border-color: #9ab51f;
+    border: 2px solid #9ab51f;;
 
    padding: 1px 20px;
 
@@ -795,9 +800,11 @@ border-radius: 0px !important;
 
     font-weight: 100;
 
+    color: #fff;
+
     border-radius: 3px;
 
-    font-size: 16px;
+    font-size: 12px;
 
     text-align: center;
 
@@ -841,7 +848,7 @@ section h2.section-heading {
 
     font-size: 40px;
 
-    margin-top: 80px;
+    margin-top: 30px;
 
     margin-bottom: 15px;
 
@@ -947,7 +954,7 @@ section h2.section-heading {
 
 .border-side > span {
 
-   background-image: url("../images/mission.gif");
+    background-color: #c6dcff;;
 
     position: relative;
 
@@ -975,7 +982,7 @@ section h2.section-heading {
 
 .border-sider > span {
 
-    background-image: url("../images/mission.gif");
+    /*background-image: url("../images/mission.gif");*/
     background-color: #fff;
 
     position: relative;
@@ -1192,7 +1199,7 @@ section#contact .form-group input, section#contact .form-group textarea {
 
 {
 
-    font-size: 24px;
+    font-size: 22px;
 
 }
 
@@ -1200,11 +1207,11 @@ section#contact .form-group input, section#contact .form-group textarea {
 
    
 
-    font-size: 30px;
+    font-size: 22px;
 
-    padding-top: 50px;
+    padding-top:15px;
 
-    padding-right: 70px;
+    padding-right: 15px;
 
   font-family: myFirstFont;
 
@@ -1221,15 +1228,20 @@ section#contact .form-group input, section#contact .form-group textarea {
 {
 
     float: right;
+    height: 409px;
+    margin-right: 5px;
+    margin-top: 15px;
+    width: 220px;
 
-    margin-right: 50px;
+}
 
-    width: 270px;
+#workright{
 
-    height: 400px;
-
-    margin-top: -20px;
-
+  float: right;
+    height: 409px;
+    margin-right: 5px;
+    margin-top: -275px;
+    width: 220px;
 }
 
 
@@ -1258,7 +1270,7 @@ section#contact .form-group input, section#contact .form-group textarea {
 
     height: 44px;
 
-    position: fixed;
+    /*position: fixed;*/
 
     bottom: 0px;
 
